Optimized the property names to create an even smaller minified footprint

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
         <form action="#" id="etWidget_form" method="post" enctype="multipart/form-data">
           <!--[if lt IE 8]>
           Your browser is not supported. Please upgrade.
-          <input type="hidden" id="etWidget_obsoleteBrowser" value="1">
+          <input type="hidden" id="etObsolete" value="1">
           <![endif]-->
           <label for="etWidget_make">Make:</label>
           <select id="etWidget_make" required disabled name="make"><option value="">- Loading -</option></select>
