--- a/index.htm
+++ b/index.htm
@@ -14,19 +14,19 @@
     <div class="container">
       <!-- emotion widget start -->
       <div class="etWidget">
-        <form action="#" id="etWidget_form" method="post" enctype="multipart/form-data">
+        <form action="#" id="et_form" method="post" enctype="multipart/form-data">
           <!--[if lt IE 8]>
           Your browser is not supported. Please upgrade.
           <input type="hidden" id="etObsolete" value="1">
           <![endif]-->
-          <label for="etWidget_make">Make:</label>
-          <select id="etWidget_make" required disabled name="make"><option value="">- Loading -</option></select>
-          <label for="etWidget_model">Model:</label>
-          <select id="etWidget_model" required disabled name="model"><option value="">- Loading -</option></select>
-          <label for="etWidget_fuel">Fuel:</label>
-          <select id="etWidget_fuel" required disabled name="fuel"><option value="">- Loading -</option></select>
-          <label for="etWidget_variant">Variant:</label>
-          <select id="etWidget_variant" required disabled name="variantId"><option value="">- Loading -</option></select>
+          <label for="et_make">Make:</label>
+          <select id="et_make" required disabled name="make"><option value="">- Loading -</option></select>
+          <label for="et_model">Model:</label>
+          <select id="et_model" required disabled name="model"><option value="">- Loading -</option></select>
+          <label for="et_fuel">Fuel:</label>
+          <select id="et_fuel" required disabled name="fuel"><option value="">- Loading -</option></select>
+          <label for="et_variant">Variant:</label>
+          <select id="et_variant" required disabled name="variantId"><option value="">- Loading -</option></select>
           <input type="submit" value="Search">
         </form>
       </div>
