--- a/index-simple.htm
+++ b/index-simple.htm
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Celtic Tuning/Emotion Tuning Javascript SDK example</title>
-    <link rel="stylesheet" href="_assets/css/etct-microsite.min.css" media="all">
     <!-- emotion dependencies start -->
-    <link rel="stylesheet" href="_assets/css/etct-base.css" media="all">
-    <link rel="stylesheet" href="_assets/css/etct-style.css" media="screen">
     <script type="text/javascript" src="js/etctApi.min.js"></script>
     <!-- emotion dependencies end -->
   </head>
@@ -14,21 +11,13 @@
     <div class="container">
       <!-- emotion widget start -->
       <div class="etWidget">
-        <header>
-          <img src="_assets/img/logo.png" alt="Logo" width="50%" height="auto" alt="CelticTuning">
-          <h1>Car selector</h1>
-        </header>
         <div class="etContent">
           <form action="detail.htm" id="etct_form" method="post" enctype="multipart/form-data">
-            <label for="etct_make">Make:</label>
             <select id="etct_make" required disabled data-method="make" name="makeId"><option value="">- Loading -</option></select>
-            <label for="etct_model">Model:</label>
             <select id="etct_model" required disabled data-method="model" name="modelId"><option value="">- Loading -</option></select>
-            <label for="etct_fuel">Fuel:</label>
             <select id="etct_fuel" required disabled data-method="fuel" name="fuelId"><option value="">- Loading -</option></select>
-            <label for="etct_variant">Variant:</label>
             <select id="etct_variant" required disabled data-method="variant" name="variantId"><option value="">- Loading -</option></select>
-            <div class="etSubmitButton"><input id="etct_submit" type="submit" disabled value="Show"></div>
+            <input id="etct_submit" type="submit" disabled value="Show">
           </form>
         </div>
       </div>
