--- a/detail.htm
+++ b/detail.htm
@@ -7,8 +7,7 @@
     <!-- emotion dependencies start -->
     <link rel="stylesheet" href="_assets/css/etct-base.css" media="all">
     <link rel="stylesheet" href="_assets/css/etct-style.css" media="screen">
-    <script type="text/javascript" src="js/etctApi.js"></script>
-    <script type="text/javascript" src="js/etctResultHandler.js"></script>
+    <script type="text/javascript" src="js/etctApi.min.js"></script>
     <!-- emotion dependencies end -->
   </head>
   <body>
