New, upgraded results details page

--- a/index-simple-one-page.htm
+++ b/index-simple-one-page.htm
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Celtic Tuning/Emotion Tuning Javascript SDK example</title>
     <!-- emotion dependencies start -->
-    <script type="text/javascript" src="js/etctApi.min.js"></script>
+    <script type="text/javascript" src="https://www.emotion-tuning.com/SDK/js/etctApi.min.js"></script>
     <!-- emotion dependencies end -->
   </head>
   <body>
