--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <!-- emotion dependencies start -->
     <link rel="stylesheet" href="_assets/css/etct-base.css" media="all">
     <link rel="stylesheet" href="_assets/css/etct-style.css" media="screen">
-    <script type="text/javascript" src="js/etctApi.min.js"></script>
+    <script type="text/javascript" src="https://www.emotion-tuning.com/SDK/js/etctApi.min.js"></script>
     <!-- emotion dependencies end -->
   </head>
   <body>
