--- a/detail.htm
+++ b/detail.htm
@@ -38,6 +38,7 @@
           </h1>
           <div class="carDetails">
             <p><img src="_assets/img/placeholder.png" id="etct_VehicleModelImageUrl" width="auto" height="auto" alt="img" align="left" class="etImg" /><span id="etct_CustomerNotes"></span></p>
+            <div class="clearfix"></div>
           </div>
           <div class="leftCol">
           <h2>Vehicle stats</h2>
