--- a/index.htm
+++ b/index.htm
@@ -3,34 +3,214 @@
   <head>
     <meta charset="utf-8">
     <title>Celtic Tuning/Emotion Tuning Javascript SDK example</title>
-    <link rel="stylesheet" href="_assets/css/etct-microsite.min.css" media="all">
     <!-- emotion dependencies start -->
-    <link rel="stylesheet" href="_assets/css/etct-base.css" media="all">
-    <link rel="stylesheet" href="_assets/css/etct-style.css" media="screen">
-    <script type="text/javascript" src="https://www.emotion-tuning.com/SDK/js/etctApi.min.js"></script>
+    <link rel="stylesheet" href="_assets/css/etct-base-and-style.min.css" media="screen">
+    <script type="text/javascript" src="js/etctApi.min.js"></script>
     <!-- emotion dependencies end -->
   </head>
   <body>
     <div class="container">
       <!-- emotion widget start -->
-      <div class="etWidget">
-        <header>
-          <img src="_assets/img/logo.png" alt="Logo" width="50%" height="auto" alt="CelticTuning">
-          <h1>Car selector</h1>
-        </header>
-        <div class="etContent">
           <form action="detail.htm" id="etct_form" method="post" enctype="multipart/form-data">
-            <label for="etct_make">Make:</label>
             <select id="etct_make" required disabled data-method="make" name="makeId"><option value="">- Loading -</option></select>
-            <label for="etct_model">Model:</label>
             <select id="etct_model" required disabled data-method="model" name="modelId"><option value="">- Loading -</option></select>
-            <label for="etct_fuel">Fuel:</label>
             <select id="etct_fuel" required disabled data-method="fuel" name="fuelId"><option value="">- Loading -</option></select>
-            <label for="etct_variant">Variant:</label>
             <select id="etct_variant" required disabled data-method="variant" name="variantId"><option value="">- Loading -</option></select>
-            <div class="etSubmitButton"><input id="etct_submit" type="submit" disabled value="Show"></div>
+            <input id="etct_submit" type="submit" disabled value="Show">
           </form>
+      <div class="etResult" id="etct_result">
+        <h2 class="etLeft">
+          <span id="etct_ModelAndPlatformName"></span>
+        </h2>
+        <a href="#" class="etRight etClose" id="etct_close_result">
+          &times;
+        </a>
+        <div class="clearfix"></div>
+        <p><img src="_assets/img/placeholder.png" id="etct_VehicleModelImageUrl" width="auto" height="auto" alt="img" align="left" class="etImg" /><span id="etct_CustomerNotes"></span></p>
+        <div class="clearfix"></div>
+        
+        <h2>Vehicle stats</h2>
+        <table class="etVehicleStats">
+          <tr>
+            <td><strong>Model:</strong></td>
+            <td><span id="etct_ModelName"></span></td>
+          </tr>
+          <tr>
+            <td><strong>Variant:</strong></td>
+            <td><span id="etct_VariantName"></span></td>
+          </tr>
+          <tr>
+            <td><strong>Years:</strong></td>
+            <td><span id="etct_VariantFromYear"></span> - <span id="etct_VariantToYear"></span></td>
+          </tr>
+          <tr>
+            <td><strong>Fuel:</strong></td>
+            <td><span id="etct_Fuel"></span></td>
+          </tr>
+          <tr>
+            <td><strong>Engine Size:</strong></td>
+            <td><span id="etct_EngineCC">0</span>ccm</td>
+          </tr>
+          <tr>
+            <td><strong>ECU Type:</strong></td>
+            <td><span id="etct_ECUType"></span></td>
+          </tr>
+        </table>
+        <h2>
+          Stages
+        </h2>
+        <ul class="etStageTabs" id="etct_stageTabs"></ul>
+        <div class="clearfix"></div>
+        <div class="etStage" id="etct_template_stage">
+          <table>
+            <thead>
+              <tr>
+                <th>
+                  Specs
+                </th>
+                <th>
+                  Original
+                </th>
+                <th>
+                  Modified
+                </th>
+                <th>
+                  +
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  Power (<span id="etct_StandardPowerUnit"></span>)
+                </td>
+                <td>
+                  <span id="etct_StandardPower"></span>
+                </td>
+                <td>
+                  <span class="etct_ModifiedPower"></span>
+                </td>
+                <td>
+                  <span class="etct_PowerGain"></span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Torque (<span id="etct_StandardTorqueUnit"></span>)
+                </td>
+                <td>
+                  <span id="etct_StandardTorque"></span>
+                </td>
+                <td>
+                  <span class="etct_ModifiedTorque"></span>
+                </td>
+                <td>
+                  <span class="etct_TorqueGain"></span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+        <div id="etct_TuningStages" class="etStages"></div>      
+        <h2>
+          Available Options
+        </h2>
+        <table>
+          <thead>
+            <tr>
+              <th>
+                DPF Removal
+              </th>
+              <th>
+                EGR Removal
+              </th>
+              <th>
+                VMax Removal
+              </th>
+              <th>
+                Rev limiter Removal
+              </th>
+              <th>
+                Launch Control
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <div class="etSprite etUnavailable" id="etct_DpfRemovalAvailable_Display">&times;</div>
+              </td>
+              <td>
+                <div class="etSprite etUnavailable" id="etct_EgrRemovalAvailable_Display">&times;</div>
+              </td>
+              <td>
+                <div class="etSprite etUnavailable" id="etct_VMaxRemovalAvailable_Display">&times;</div>
+              </td>
+              <td>
+                <div class="etSprite etUnavailable" id="etct_RevLimiterRemovalAvailable_Display">&times;</div>
+              </td>
+              <td>
+                <div class="etSprite etUnavailable" id="etct_LaunchControlAvailable_Display">&times;</div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="etSubmitButton"><button type="button" id="etct_showRequestQuote">Request quote</button></div>
+      </div>
+      <div class="etRequestQuote" id="etct_requestQuote">
+        <h2 class="etLeft">
+          Quote request
+        </h2>
+        <a href="#" class="etRight etClose" id="etct_close_request">
+          &times;
+        </a>
+        <div class="clearfix"></div>
+        <form action="#" id="etct_rq_form">
+          <div class="etLayoutHalf etLeft">
+            <h3>Car</h3>
+            <label for="etct_sr_make">Make:</label>
+            <select id="etct_sr_make" required disabled data-method="make" name="makeId"><option value="">- Loading -</option></select>
+            <label for="etct_sr_model">Model:</label>
+            <select id="etct_sr_model" required disabled data-method="model" name="modelId"><option value="">- Loading -</option></select>
+            <label for="etct_sr_fuel">Fuel:</label>
+            <select id="etct_sr_fuel" required disabled data-method="fuel" name="fuelId"><option value="">- Loading -</option></select>
+            <label for="etct_sr_variant">Variant:</label>
+            <select id="etct_sr_variant" required disabled data-method="variant" name="variantId"><option value="">- Loading -</option></select>
+          </div>
+          <div class="etLayoutQuarter etLeft">
+            <h3>Selected stage</h3>
+            <div id="etct_AvailableStages"></div>
+          </div>
+          <div class="etLayoutQuarter etRight">
+            <h3>Options</h3>
+            <input type="checkbox" id="etct_DpfRemovalAvailable" name="dpfRemoval" disabled> <label class="etInline" for="etct_DpfRemovalAvailable">DPF Removal</label><br>
+            <input type="checkbox" id="etct_EgrRemovalAvailable" name="egrRemoval" disabled> <label class="etInline" for="etct_EgrRemovalAvailable">EGR Removal</label><br>
+            <input type="checkbox" id="etct_VMaxRemovalAvailable" name="vmaxRemoval" disabled> <label class="etInline" for="etct_VMaxRemovalAvailable">VMax Removal</label><br>
+            <input type="checkbox" id="etct_RevLimiterRemovalAvailable" name="revLimiterRemoval" disabled> <label class="etInline" for="etct_RevLimiterRemovalAvailable">Rev Limiter Removal</label><br>
+            <input type="checkbox" id="etct_LaunchControlAvailable" name="launchControl" disabled> <label class="etInline" for="etct_LaunchControlAvailableFor">Launch control</label>
+          </div>
+          <div class="clearfix"></div>
+          <hr/>
+          <label for="etct_customerName">Name<span class="etRequired">*</span></label>
+          <input type="text" id="etct_customerName" name="customerName" required class="etFullWidth">
+          <label for="etct_email">E-mail<span class="etRequired">*</span></label>
+          <input type="email" id="etct_email" name="email" required class="etFullWidth">
+          <label for="etct_telephone">Telephone</label>
+          <input type="text" id="etct_telephone" name="telephone" class="etFullWidth">
+          <label for="etct_vehicleYear">Vehicle year<span class="etRequired">*</span></label>
+          <select name="vehicleYear" id="etct_vehicleYear" required><option value="">- Please select -</option></select>
+          <label for="etct_address">Address</label>
+          <input type="text" id="etct_address" name="address" class="etFullWidth">
+          <label for="etct_townCity">Town/city<span class="etRequired">*</span></label>
+          <input type="text" id="etct_townCity" name="townCity" required class="etFullWidth">
+          <label for="etct_countryState">Country/State</label>
+          <input type="text" id="etct_countryState" name="countryState" class="etFullWidth">
+          <label for="etct_postCode">ZIP</label>
+          <input type="text" id="etct_postCode" name="postCode" class="etFullWidth">
+          <label for="etct_additionalComments">Additional comments</label>
+          <textarea id="etct_additionalComments" name="additionalComments" class="etFullWidth"></textarea>
+          <div class="etSubmitButton"><input id="etct_requestSubmit" type="submit" value="Send quote request"></div>
+        </form>
       </div>
       <!-- emotion widget end -->
     </div>
