--- a/index-widget.htm
+++ b/index-widget.htm
@@ -151,19 +151,19 @@
           <tbody>
             <tr>
               <td>
-                <div class="etSprite etUnavailable" id="etct_DpfRemovalAvailable_Display">&times;</div>
+                <div class="etSprite etUnavailable" title="Where applicable we are able to switch off the software functionality and monitoring for the Diesel Particulate Filter enabling it to be removed from the vehicle. For more information please refer to our section on DPF Removal." id="etct_DpfRemovalAvailable_Display">&times;</div>
               </td>
               <td>
-                <div class="etSprite etUnavailable" id="etct_EgrRemovalAvailable_Display">&times;</div>
+                <div class="etSprite etUnavailable" title="Where applicable we are able to switch off the software functionality and monitoring for the Exhaust Gas Recirculation valve enabling it to be blanked off. For more information please refer to our section on EGR Removal." id="etct_EgrRemovalAvailable_Display">&times;</div>
               </td>
               <td>
-                <div class="etSprite etUnavailable" id="etct_VMaxRemovalAvailable_Display">&times;</div>
+                <div class="etSprite etUnavailable" title="Where applicable we are able to raise/lower or completely remove the maximum speed limiter from a vehicle." id="etct_VMaxRemovalAvailable_Display">&times;</div>
               </td>
               <td>
-                <div class="etSprite etUnavailable" id="etct_RevLimiterRemovalAvailable_Display">&times;</div>
+                <div class="etSprite etUnavailable" title="Where applicable we are able to raise the RPM limiter enabling a wider RPM band for performance. This is available on both petrol and diesel engines." id="etct_RevLimiterRemovalAvailable_Display">&times;</div>
               </td>
               <td>
-                <div class="etSprite etUnavailable" id="etct_LaunchControlAvailable_Display">&times;</div>
+                <div class="etSprite etUnavailable" title="Where applicable we are able to alter/install launch control into the software. This enables fixed RPM launches enabling faster sprint times. An addition for the dedicated enthusiast." id="etct_LaunchControlAvailable_Display">&times;</div>
               </td>
             </tr>
           </tbody>
