--- a/index-widget.htm
+++ b/index-widget.htm
@@ -189,10 +189,12 @@
             <select id="etct_sr_fuel" required disabled data-method="fuel" name="fuelId"><option value="">- Loading -</option></select>
             <label for="etct_sr_variant">Variant:</label>
             <select id="etct_sr_variant" required disabled data-method="variant" name="variantId"><option value="">- Loading -</option></select>
+            <input type="hidden" name="carCompleteString" id="etct_carCompleteString">
           </div>
           <div class="etLayoutQuarter etLeft">
             <h3>Selected stage</h3>
             <div id="etct_AvailableStages"></div>
+            <input type="hidden" name="stageName" id="etct_stageName">
           </div>
           <div class="etLayoutQuarter etRight">
             <h3>Options</h3>
