--- a/index-widget.htm
+++ b/index-widget.htm
@@ -191,12 +191,12 @@
             <select id="etct_sr_variant" required disabled data-method="variant" name="variantId"><option value="">- Loading -</option></select>
             <input type="hidden" name="carCompleteString" id="etct_carCompleteString">
           </div>
-          <div class="etLayoutQuarter etLeft">
+          <div class="etLayoutHalf etRight">
             <h3>Selected stage</h3>
             <div id="etct_AvailableStages"></div>
             <input type="hidden" name="stageName" id="etct_stageName">
           </div>
-          <div class="etLayoutQuarter etRight">
+          <div class="etLayoutHalf etRight">
             <h3>Options</h3>
             <input type="checkbox" id="etct_DpfRemovalAvailable" name="dpfRemoval" disabled> <label class="etInline" for="etct_DpfRemovalAvailable">DPF Removal</label><br>
             <input type="checkbox" id="etct_EgrRemovalAvailable" name="egrRemoval" disabled> <label class="etInline" for="etct_EgrRemovalAvailable">EGR Removal</label><br>
